Continue the App

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1429,7 +1429,9 @@
    "id": "0f805b76-0da3-4610-b97c-e4f0572895b6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['thp']"
+   ]
   },
   {
    "cell_type": "code",
