--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1415,7 +1415,7 @@
     "\n",
     "ax.set_xlabel(\"well_name\")\n",
     "ax.set_ylabel(\"Oil_rate\")\n",
-    "\n",
+    "ax.set_title(\n",
     "plt.show()"
    ]
   },
